2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* service-list.pl.in: added roles stuff
	* service.pl.in: use roles, separate priorities for each runlevel
	* services-conf.in: use this stuff

2005-06-30  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in:
	Added patch from the KUbuntu people for the network backend, should
	search the rest of the Ubuntu patches and apply them... Thanks to the
	KUbuntu team :). UPDATE: It's from Juan Luis Baptiste, sorry about
	this

2005-06-21  Christian Meyer  <chrisime@gnome-de.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in: Added
	support for Vida Linux OS 1.2

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: applied patch to update /etc/timezone in debian based
	systems. Fixes #167035

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added support for WEP key type (ASCII or hexa)

2005-05-15  Christian Meyer  <chrisime@gnome-de.org>

	* network.pl.in: fix small issue with dhcpcd

2005-04-13  Scott J. Harmon  <harmon@ksu.edu>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
	services-conf.in, shares-conf.in, time-conf.in, users-conf.in:
	Added support for Slackware 10.1.0

2005-04-12  Joe Marcus Clarke  <marcus@freebsd.org>

	* network.pl.in: Fixed FreeBSD network tool support

2005-04-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ABOUT-NLS: Added
	* configure.in, autogen.sh: removed gnome-autogen.sh dependencies

2005-04-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* sync'ed contents with the current gnome.org server

2005-04-03  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS (again, sorry!). Must have glitched or stroked or something.

2005-04-04  Carlos Garnacho Parro  <carlosg@gnome.org>
