@@ -791,19 +791,19 @@ sub gst_network_get_interface_type
       $types_cache{$dev} = "modem";
     }
   }
-  elsif ($dev =~ /(eth|dc|ed|bfe|em|fxp|bge|de|xl|ixgb|txp|vx|lge|nge|pcn|re|rl|sf|sis|sk|ste|ti|tl|tx|vge|vr|wb|cs|ex|ep|fe|ie|lnc|sn|xe|le|an|awi|wi|ndis|wlaue|axe|cue|kue|rue|fwe|nve)[0-9]/)
+  elsif ($dev =~ /^(eth|dc|ed|bfe|em|fxp|bge|de|xl|ixgb|txp|vx|lge|nge|pcn|re|rl|sf|sis|sk|ste|ti|tl|tx|vge|vr|wb|cs|ex|ep|fe|ie|lnc|sn|xe|le|an|awi|wi|ndis|wlaue|axe|cue|kue|rue|fwe|nve)[0-9]/)
   {
     $types_cache{$dev} = "ethernet";
   }
-  elsif ($dev =~ /irlan[0-9]/)
+  elsif ($dev =~ /^irlan[0-9]/)
   {
     $types_cache{$dev} = "irlan";
   }
-  elsif ($dev =~ /plip[0-9]/)
+  elsif ($dev =~ /^plip[0-9]/)
   {
     $types_cache{$dev} = "plip";
   }
-  elsif ($dev =~ /lo[0-9]?/)
+  elsif ($dev =~ /^lo[0-9]?/)
   {
     $types_cache{$dev} = "loopback";
   }
