@@ -1,3 +1,8 @@
+2005-07-15  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network.pl.in (gst_network_get_interface_type): set more strict
+	regexp, so irlan[0-9] isn't confused with an[0-9]
+
 2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.3.0
